--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Sudoku</title>
 </head>
@@ -12,10 +15,18 @@
         <h1>Sudoku</h1>
     </div>
 
-    <div class="container" id="puzzle">
-        <button id="solve-btn">Solve</button>
+    <p id="solution"></p>
+
+    <div class="container">
+        <div id="puzzle">
+            
+        </div>
+        <div>
+            <button id="solve-btn">Solve</button>
+        </div>
     </div>
     
-<script src="./js/app.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
